--- a/css/style.scss
+++ b/css/style.scss
@@ -1,5 +1,3 @@
-@import "vars";
-
 html {
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
@@ -27,12 +25,13 @@ img {
 }
 
 body {
+  font-family: "Inter", Verdana, Arial, Helvetica, sans-serif;
   min-width: 320px;
 }
 
-main.main {
-  flex: 1 1 auto;
-}
+// main.main {
+//   flex: 1 1 auto;
+// }
 
 .wrapper {
   min-height: 100%;
@@ -41,21 +40,324 @@ main.main {
 }
 
 .logo {
-  padding: 12px 0;
+  height: 28px;
 }
 
-.logo-text {
-  padding-left: 35px;
+.header-logo-desc {
   color: #6d6d6d;
-  font-size: 0.75rem;
-  line-height: 0.25rem;
-  font-weight: 300;
+  font-size: 0.6875em;
+  padding-left: 34px;
 }
 
 nav .navbar {
   background: #000;
 }
 
-.h1 {
-  color: $color-red;
+.btn-primary {
+  --bs-btn-color: #fff;
+  --bs-btn-bg: #4aac33;
+  --bs-btn-border-color: #4aac33;
+  --bs-btn-hover-color: #fff;
+  --bs-btn-hover-bg: #4aac33;
+  --bs-btn-hover-border-color: #4aac33;
+  --bs-btn-focus-shadow-rgb: 49, 132, 253;
+  --bs-btn-active-color: #fff;
+  --bs-btn-active-bg: #4aac33;
+  --bs-btn-active-border-color: #4aac33;
+  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+  --bs-btn-disabled-color: #fff;
+  --bs-btn-disabled-bg: #4aac33;
+  --bs-btn-disabled-border-color: #4aac33;
 }
+
+.nav-icon-text {
+  font-size: 0.8rem;
+}
+
+.disabled .nav-icon-text {
+  color: #6d6d6d;
+}
+
+.btn-logo-dots {
+  display: none;
+}
+
+.header {
+  padding-bottom: 32px;
+}
+
+.header__form {
+  width: 30%;
+  height: 42px;
+}
+
+.search-btn,
+.menu-btn {
+  border-radius: 0;
+  border: var(--bs-border-width) solid var(--bs-border-color);
+}
+
+.form-control {
+  border-radius: 0;
+}
+
+.navbar {
+  --bs-navbar-padding-x: 0;
+  --bs-navbar-padding-y: 0.1rem;
+}
+
+.nav-bottom-text {
+  font-family: "Inter", Helvetica, Arial, Sans-Serif;
+  font-size: 16px;
+  font-size: 0.9375em;
+  line-height: 1.6em;
+  font-weight: 600;
+}
+
+.public-detail__top {
+  font-size: 13px;
+  line-height: 16px;
+}
+
+.hero-back {
+  background-image: url("../assets/img/hero-back.svg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+@media (min-width: 1200px) {
+  .public-detail-container {
+    padding: 2rem 4.5rem 3.8rem 4.5rem;
+  }
+}
+
+.btn-hero {
+  padding: 8px 20px;
+  background-color: #fff;
+  color: #4aac33;
+  border: none;
+  font-weight: 600;
+}
+
+.btn-hero:hover {
+  background-color: #b6b8b539;
+  color: #4aac33;
+}
+
+.hero-right-top-text {
+  color: #3b5998;
+  max-width: 300px;
+  border: 2px solid #6d6d6d6b;
+  transition: all 0.2s ease-in-out;
+  &:hover {
+    background-color: #ffba00;
+    color: #fff;
+    transform: translateY(-3px);
+    box-shadow: 0 3px 12px rgba(0, 0, 0, 0.155);
+  }
+  &:hover svg {
+    fill: #fff;
+    transition: all 0.2s ease-in-out;
+  }
+}
+
+.link-hero {
+  color: #60697b;
+  &:hover {
+    color: #4aac33;
+  }
+}
+
+.pt-6 {
+  padding-top: 1.5rem !important;
+}
+
+.art-text {
+  font-weight: 300;
+}
+
+.form-check-input:checked {
+  width: 21px;
+  height: 21px;
+  background-color: #4aac33;
+  border: none;
+}
+
+input:checked + .form-check-label {
+  font-weight: bold;
+}
+
+.price-hero-span {
+  font-size: 20px;
+}
+
+.text-result {
+  color: #4aac33;
+  line-height: 1.7rem;
+  font-size: 36px;
+}
+
+.btn-add-basket {
+  padding: 12px 24px;
+  font-weight: 600;
+}
+
+.nav-tabs {
+  border: none;
+}
+
+.nav-tabs .nav-link {
+  margin-bottom: 20px;
+  border: none;
+  border: none;
+  color: #333333 !important;
+  padding: 0rem;
+  padding-bottom: 4px;
+  line-height: 1.25;
+  font-weight: 400;
+  font-size: 1rem;
+}
+
+.nav-tabs .nav-item:not(:last-child) {
+  margin-right: 17px;
+}
+
+.nav-tabs .nav-link.active {
+  border-bottom: 2px solid #4aac33;
+  font-weight: 600;
+}
+
+.title-more {
+  margin-bottom: 32px;
+}
+
+.link-primary {
+  color: #4aac33;
+}
+
+.link-dark strong {
+  font-weight: 700;
+  color: #343f52;
+  word-spacing: 0.1rem;
+  letter-spacing: -0.01rem;
+  &:hover {
+    color: #4aac33 !important;
+  }
+}
+
+.card {
+  box-shadow:
+    0 0 0 0.05rem rgba(8, 60, 130, 0.06),
+    0rem 0rem 1.25rem rgba(30, 34, 40, 0.04);
+  border: 0;
+}
+
+.btn-show-more {
+  padding: 11px 25px;
+  font-weight: 600;
+  border-radius: 8px;
+}
+
+.card-footer {
+  background-color: transparent;
+  padding: 0;
+}
+
+.post-title {
+  font-weight: 700;
+  color: #343f52;
+  word-spacing: 0.1rem;
+  letter-spacing: -0.01rem;
+  font-size: 14px;
+  line-height: 1.1rem;
+}
+
+.list-group-item-2 {
+  margin-top: 10px;
+}
+
+.card-num {
+  color: #f0ad4e;
+}
+
+.footer-logo {
+  display: flex;
+  flex-direction: column;
+  font-size: 16px;
+}
+
+.footer-logo-desc {
+  color: #fff;
+  font-size: 0.6875em;
+  padding-left: 42px;
+}
+
+.footer-btn {
+  font-weight: 500;
+  padding: 12px 26px;
+}
+
+.footer-contact-link:hover {
+  color: #4aac33;
+}
+
+.footer-mail-link,
+.footer-site-link {
+  position: relative;
+  line-height: 1;
+}
+
+.footer-mail-link::after {
+  display: block;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 0;
+  height: 1px;
+  background-color: #fff;
+  content: "";
+  transition: width 0.2s ease-out;
+}
+
+.footer-mail-link:hover::after,
+.footer-mail-link:focus::after {
+  width: 100%;
+}
+
+.btn-primary {
+  transition: all 0.2s ease-in-out;
+}
+
+.btn-primary:hover {
+  transform: translateY(-3px);
+  box-shadow: 0 3px 12px rgba(0, 0, 0, 0.155);
+}
+
+// иконки dropdown
+.dropdown-social-icons {
+  position: fixed;
+  display: grid;
+  z-index: 100;
+  right: 15px;
+  bottom: 15px;
+}
+
+.dropdown-menu-nav {
+  margin: 0;
+  list-style: none;
+  background-color: #fff;
+  box-shadow: 0px 4px 19px rgba(0, 0, 0, 0.15);
+  border-radius: 36px;
+  padding: 0 8px;
+}
+
+.item-dropdown {
+  padding: 8px 0;
+}
+
+.item-dropdown-close {
+  display: none;
+}
+
+@import "media";
